<resources>
    <string name="app_name">Hermes Direct</string>
    <string name="start_button_desc">Start Forwarding</string>
    <string name="pause_button_desc">Pause Forwarding</string>
    <string name="title_activity_onboarding">Hermes Direct</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="onboarding_next_slide">NEXT</string>
    <string name="onboarding_skip_slides">SKIP</string>
    <string name="onboarding_finish">GOT IT</string>

    <string name="onboarding_slide_1_title">Welcome!</string>
    <string name="onboarding_slide_1_desc">
        There\'s a couple things we need to cover before the app will be ready for use: \n
        \n1) Invite Hermes to your server and initialize your account.
        \n2) Sync your device to your newly created account.
        \n3) Begin sending and receiving messages.
    </string>

    <string name="onboarding_slide_2_title">User Setup</string>
    <string name="onboarding_slide_2_desc_1">
        First things first, we need to authenticate your phone number:
    </string>
    <string name="onboarding_slide_2_command_template">
        h!sync
    </string>
    <string name="onboarding_slide_2_command_description">
        Next, we need to sync your device with Hermes. To do this, send the message exactly as
        you see it above. This is the command to synchronize your device to your uniquely generated
        user token.\n\n

        If it works, you\'ll see a success message like so:
    </string>
    <string name="onboarding_slide_2_command_failure">
        If not, you\'ll see a message like so with a description of what went wrong:
    </string>

    <string name="onboarding_slide_3_title">Send/Receive Messages</string>
    <string name="onboarding_slide_3_desc">Slide 3 description</string>
    <string name="dd_logo_desc">Hermes Direct logo</string>
    <string name="unsuccessful_initiation">Unsuccessful initiation.</string>
    <string name="successful_initiation">Successful initiation.</string>
    <string name="btn_generate_token">Generate New Token</string>
    <string name="btn_complete_setup">Complete</string>
    <string name="onboarding_btn_back">BACK</string>
    <string name="send_message_template">h!send This is a mere test message :D</string>
    <string name="send_message_description">As long as you\'ve synced your device and Discord account with Hermes, you can send messages to specific numbers or contact names:</string>
    <string name="send_message_success">Send message success.</string>
    <string name="invite_hermes">Before continuing on to the next step, you\'ll want to invite Hermes to your server:</string>
    <string name="btn_invite_hermes">Invite Hermes</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="label_username">Username:</string>
    <string name="label_user_id">User Id:</string>
    <string name="label_user_token">User Token:</string>
    <string name="label_channel_id">Channel Id:</string>
    <string name="label_phone_number">Phone Number:</string>
    <string name="label_device_token">Device Token:</string>
    <string name="temp_placeholder">Temp Placeholder</string>
</resources>
